--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lais Qatar | Fire & Safety Experts</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/760/760732.png" />
+    <!-- Note: For production, replace CDN with a build step (PostCSS) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
